--- a/package.json
+++ b/package.json
@@ -5,20 +5,41 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "@types/jest": "^26.0.10",
+    "axios": "^0.20.0",
     "expo": "~38.0.8",
+    "expo-localization": "~8.2.1",
+    "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "i18next": "^19.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-i18next": "^11.7.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "^2.3.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@testing-library/jest-native": "^3.3.0",
+    "@testing-library/react-native": "^7.0.2",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "jest": "^26.4.2",
+    "jest-expo": "^38.0.2",
+    "react-test-renderer": "^16.13.1",
     "typescript": "~3.9.5"
   },
   "private": true
